--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @movie do |f| %>
+<%= form_for @movie, :html => {:multipart => true} do |f| %>
 	<% if @movie.errors.any? %>
 		<div>
 			<%= pluralize(@movie.errors.count, "error")%> prevented this movie from being created:
@@ -30,8 +30,13 @@
 		<%= f.text_area "description" %>
 	</div>
 	<div>
-		<%= f.label "poster_image_url" %></br>
-		<%= f.text_field "poster_image_url" %>
+		<%= f.label "Poster upload:" %>
+		<%= f.file_field "poster" %>
+			<% if f.object.poster? %>
+				<%= image_tag f.object.poster.url %><br>
+				<%= f.label "remove poster" %><br>
+				<%= f.check_box "remove_poster" %>
+			<% end %>
 	</div>
 	<div>
 		<%= f.submit %>
